@@ -145,8 +145,8 @@ foreach(format ${formats})
   target_link_libraries(${format} ${libs} ${BABEL_LIBRARY})
   install(TARGETS ${format}
                   RUNTIME DESTINATION bin
-                  LIBRARY DESTINATION ${LIB}/openbabel/${OBVERSION}
-                  ARCHIVE DESTINATION ${LIB}/openbabel/${OBVERSION})
+                  LIBRARY DESTINATION ${LIB}/openbabel/${BABEL_VERSION}
+                  ARCHIVE DESTINATION ${LIB}/openbabel/${BABEL_VERSION})
   set_target_properties(${format} PROPERTIES
                         OUTPUT_NAME ${format}
                         PREFIX ""
@@ -158,8 +158,8 @@ foreach(format ${xml_formats})
   target_link_libraries(${format} ${libs} ${BABEL_LIBRARY})
   install(TARGETS ${format}
                   RUNTIME DESTINATION bin
-                  LIBRARY DESTINATION ${LIB}/openbabel/${OBVERSION}
-                  ARCHIVE DESTINATION ${LIB}/openbabel/${OBVERSION})
+                  LIBRARY DESTINATION ${LIB}/openbabel/${BABEL_VERSION}
+                  ARCHIVE DESTINATION ${LIB}/openbabel/${BABEL_VERSION})
   set_target_properties(${format} PROPERTIES
                         OUTPUT_NAME ${format}
                         PREFIX ""
